--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-architects/module-federation": "^16.0.3",
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular-eslint/builder": "16.0.1",
     "@angular-eslint/eslint-plugin": "16.0.1",
